# dm-on-device-training-fan-anomaly-on-mcxn947

./: .cproject  .gitignore  .project  LICENSE  README.md  SW-Content-Register.txt  dm-on-device-training-fan-anomaly-on-mcxn947.xml  frdmn947-on-device-training-fan-anomaly JLink Release.launch
Debug/: frdmn947-on-device-training-fan-anomaly_Debug.ld  frdmn947-on-device-training-fan-anomaly_Debug_library.ld  frdmn947-on-device-training-fan-anomaly_Debug_memory.ld
Release/: frdmn947-on-device-training-fan-anomaly_Release.ld  frdmn947-on-device-training-fan-anomaly_Release_library.ld  frdmn947-on-device-training-fan-anomaly_Release_memory.ld
board/: board.c  board.h  clock_config.c  clock_config.h  lvgl_support.h  pin_mux.c  pin_mux.h
custom/: custom.c  custom.h
device/: MCXN947_cm33_core0_features.h  system_MCXN947_cm33_core0.c  system_MCXN947_cm33_core0.h
drivers/: fsl_flash.c  fsl_flash.h  fsl_flash_ffr.h  fsl_flexio_mculcd_edma.c  fsl_flexio_mculcd_edma.h  fsl_flexspi_nor_flash.h
guider/: anomaly_detection.guiguider
guider/sdk/Core/CMSIS/: CMSIS_Include_core_cm.cmake
guider/sdk/Core/board/: lvgl_support.c  pin_mux.c
guider/sdk/Core/device/: device_MCXN947_CMSIS.MCXN947.cmake  device_MCXN947_system.MCXN947.cmake
guider/sdk/Core/doc/: readme.md
guider/sdk/Core/drivers/: driver_clock.MCXN947.cmake  driver_common.MCXN947.cmake  driver_edma4.MCXN947.cmake  driver_edma_soc.MCXN947.cmake  driver_flexio.MCXN947.cmake  driver_flexio_mculcd.MCXN947.cmake  driver_flexio_mculcd_edma.MCXN947.cmake  driver_flexio_mculcd_smartdma.MCXN947.cmake  driver_gpio.MCXN947.cmake  driver_inputmux.MCXN947.cmake  driver_inputmux_connections.MCXN947.cmake  driver_lpc_smartdma.MCXN947.cmake  driver_lpflexcomm.MCXN947.cmake  driver_lpi2c.MCXN947.cmake  driver_port.MCXN947.cmake  (+8 more)
guider/sdk/armgcc/: CMakeLists.txt  all_lib_device.cmake  armgcc.cmake  config.cmake  flags.cmake  flags.cmake_template  mcux_config.cmake
guider/sdk/armgcc/startup/: device_MCXN947_startup.MCXN947.cmake
guider/sdk/iar/: lvgl_guider.ewd  lvgl_guider.ewp  lvgl_guider.eww  lvgl_guider_ewp.template
guider/sdk/mcuxpresso/: .cproject  .project  .project_template
guider/sdk/mdk/: JLinkSettings.JLinkScript  JLinkSettings.ini  lvgl_guider.uvmpw  lvgl_guider.uvoptx  lvgl_guider.uvprojx  lvgl_guider_uvprojx.template
libsvmcu/: COPYRIGHT  fp_16bits.cpp  fp_16bits.h  l2bm.c  l2bm.h  pairstack.h  svm.cpp  svm.h  svm_test.cpp  svm_test.h
lvgl/demos/widgets/: lv_demo_widgets.c
lvgl/src/core/: lv_obj_pos.c
source/: FreeRTOSConfig.h  algo_task.c  app_gui_demo.c  app_lvgl.c  app_lvgl.h  app_main.h  ctp_impl.c  ctp_impl.h  fsl_ft5406.c  fsl_ft5406.h  gt911_ctp.c  gt911_ctp.h  imu_ops.c  imu_ops.h  inc_image.s  lcd_impl_flexio.c  lcd_impl_flexio.h  lv_conf.h  lvgl_freertos.h  main.c  ringbuffer.c  ringbuffer.h  semihost_hardfault.c  sensor_task.c  st7796_lcd.c  st7796_lcd.h
source/FXLS8967/: fxls8974.c
source/FXLS8974CF/: fxls8974.c  fxls8974.h
source/MPU6000A/: mpu6050.c  mpu6050.h
source/app_ui_custom/: app_custom_ui.c  app_custom_ui.h
source/custom/: custom.c  custom.h  custom.mk
source/generated_UI/: events_init.c  events_init.h  gui_guider.c  gui_guider.h  gui_guider.py  setup_scr_ANModel_Training.c  setup_scr_Main.c  setup_scr_Model_Training.c  setup_scr_screen_1.c
source/generated_UI/guider_customer_fonts/: guider_customer_fonts.h
source/generated_UI/guider_fonts/: guider_fonts.h
source/generated_UI/images/: _fan_abnormal_alpha_160x160.c  _fan_normal_on_alpha_160x160.c  _logo_nxp_alpha_100x37.c
startup/: startup_MCXN947_cm33_core0_Keil.S
(+29 files in other folders)
